added wheel gesture

--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -706,6 +706,38 @@
           <select data-hierarchy="Rocker" name="rightMouseClick" class="selectField"></select>
         </li>
       </ul>
+      <ul class="optionList">
+        <li>
+          <div>
+            <p data-i18n="extraNameWheelActive" class="option"></p>
+            <p data-i18n="extraDescriptionWheelActive" class="info"></p>
+          </div>
+          <input data-hierarchy="Wheel" name="active" id="ExtrasActivateWheel" class="toggleButton" type="checkbox"><label for="ExtrasActivateWheel"></label>
+        </li>
+        <li class="noMargin">
+          <div>
+            <p data-i18n="extraNameWheelMouseButton" class="option"></p>
+            <p data-i18n="extraDescriptionWheelMouseButton" class="info"></p>
+          </div>
+          <select data-hierarchy="Wheel" name="mouseButton" class="selectField">
+            <option value="1" data-i18n="settingNameMouseButtonLeft"></option>
+            <option value="2" data-i18n="settingNameMouseButtonRight"></option>
+            <option value="4" data-i18n="settingNameMouseButtonMiddle"></option>
+          </select>
+        </li>
+        <li class="noMargin">
+          <div>
+            <p data-i18n="extraNameWheelUp" class="option"></p>
+          </div>
+          <select data-hierarchy="Wheel" name="wheelUp" class="selectField"></select>
+        </li>
+        <li>
+          <div>
+            <p data-i18n="extraNameWheelDown" class="option"></p>
+          </div>
+          <select data-hierarchy="Wheel" name="wheelDown" class="selectField"></select>
+        </li>
+      </ul>
     </div>
 
     <div id="About">
